# codex-cn

./: .gitignore  .harness-reflect  AGENTS.md  README.md  harness-runtime.json  harness-runtime.json.bak
.github/scripts/: install-musl-build-tools.sh
.github/workflows/: ci.yml  manual-release.yml  rust-ci.yml  rust-release-windows.yml  rust-release.yml  sync-parent-upstream.yml
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py
codex-rs/: Cargo.toml  README.md
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: app_cmd.rs  github_cmd.rs  lib.rs  main.rs  mcp_cmd.rs
codex-rs/cloud-tasks/src/: lib.rs
codex-rs/core/: Cargo.toml  config.schema.json  models.json
codex-rs/core/src/: codex.rs  lib.rs  scheduled_tasks.rs  shell_snapshot.rs
codex-rs/core/src/config/: mod.rs  profile.rs  types.rs
codex-rs/core/src/models_manager/: manager.rs
codex-rs/core/src/skills/: loader.rs
codex-rs/core/src/state/: service.rs
codex-rs/core/src/tools/: spec.rs
codex-rs/core/tests/suite/: agent_teams.rs  agent_websocket.rs  approvals.rs  memories.rs  model_switching.rs  plugins.rs  prompt_caching.rs  realtime_conversation.rs  skill_approval.rs  skills.rs  sqlite_state.rs  view_image.rs
codex-rs/docs/: github-webhook.md  i18n-remaining-first-pass.txt  i18n-remaining-second-pass.txt  i18n-zh-terminology.md  kanban-workspace-architecture.md  kanban-workspace-prd.md
codex-rs/feedback/src/: lib.rs
codex-rs/github-webhook/: BUILD.bazel  Cargo.toml
codex-rs/github-webhook/src/: lib.rs
codex-rs/login/src/: server.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs  message_processor.rs
codex-rs/mcp-server/tests/common/: mcp_process.rs
codex-rs/serve/: Cargo.toml  build.rs
codex-rs/serve/assets/web/: index.html
codex-rs/serve/assets/web/assets/: SessionChat-BgXSzwpM.js  file-DouWLPto.js  files-DD30I5aJ.js  index-B0GzyaIK.css  index-BLB2pswN.js  index-C8YANlFw.js  index-D7lYzqJa.js  index-ltMCMtoy.js  markdown-vendor-C-0V0oGR.js  terminal-DxVCwlIq.js  useCopyToClipboard-BOzSlWaM.js
codex-rs/serve/src/: kanban.rs  lib.rs  server.rs  workspace.rs
codex-rs/shell-command/src/command_safety/: is_safe_command.rs
codex-rs/state/src/runtime/: logs.rs
codex-rs/tui/src/: app.rs  app_backtrack.rs  chatwidget.rs  history_cell.rs  hooks_config.rs  model_migration.rs  multi_agents.rs  oss_selection.rs  resume_picker.rs  slash_command.rs  status_indicator_widget.rs  theme_picker.rs
codex-rs/tui/src/bottom_pane/: app_link_view.rs  chat_composer.rs  command_popup.rs  experimental_features_view.rs  feedback_view.rs  file_search_popup.rs  list_selection_view.rs  mcp_server_elicitation.rs  mod.rs  multi_select_picker.rs  skill_popup.rs  skills_toggle_view.rs  slash_commands.rs  status_line_setup.rs
codex-rs/tui/src/chatwidget/: hooks.rs  realtime.rs  skills.rs  tests.rs
codex-rs/tui/src/onboarding/: auth.rs  trust_directory.rs  welcome.rs
codex-rs/tui/src/snapshots/: codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap  codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap  codex_tui__model_migration__tests__model_migration_prompt.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex_mini.snap  codex_tui__model_migration__tests__model_migration_prompt_gpt5_family.snap  codex_tui__status_indicator_widget__tests__renders_with_working_header.snap
docs/: agent-teams.md  config.md  github-outcome-first-overlay.md  github-webhook-unification-prd.md  install.md  kanban-board-prd-github.md  kanban-board-prd.md  slash_commands.md
docs/execution/plans/: github-webhook-ack-plan.md
docs/plans/: 2026-03-06-codex-swarm-architecture.md  2026-03-12-kanban-board-design.md
scripts/: install-hodexctl.ps1  install-hodexctl.sh  install.ps1  install.sh
scripts/hodexctl/: README.md  hodexctl-smoke.ps1  hodexctl-smoke.sh  hodexctl.ps1  hodexctl.sh
scripts/install/: install.ps1  install.sh
tasks/019cc62e-d6b8-7731-af24-e7e4fe9201fe/: code-review.md
web/: package-lock.json  package.json  tsconfig.json  tsconfig.sw.json
web/protocol/src/: schemas.ts  types.ts
web/src/: index.css  router.tsx
web/src/api/: client.test.ts  client.ts
web/src/components/: PlanUpdatePanel.tsx  StandaloneMarkdown.tsx
web/src/hooks/: useSSE.ts
web/src/hooks/queries/: useGithubJobLog.ts  useGithubJobs.ts  useGithubKanban.ts  useGithubRepos.ts  useGithubWorkItemDetail.ts  useGithubWorkItems.ts  (+7 more)
web/src/lib/: assistant-runtime.ts  languages.ts  query-keys.ts
web/src/types/: api.ts  pwa.d.ts
(+68 files in other folders)
