[package]
name = "codex-serve"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_serve"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-core = { workspace = true }
codex-file-search = { workspace = true }
codex-github-webhook = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-cli = { workspace = true }
codex-utils-pty = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
webbrowser = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
